; ModuleID = '/home/carl/AnghaBench/TDengine/src/os/windows/src/extr_twinsocket.c_taosSetNonblocking.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/os/windows/src/extr_twinsocket.c_taosSetNonblocking.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FIONBIO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @taosSetNonblocking(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %12

8:                                                ; preds = %2
  store i32 1, i32* %5, align 4
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @FIONBIO, align 4
  %11 = call i32 @ioctlsocket(i32 %9, i32 %10, i32* %5)
  br label %16

12:                                               ; preds = %2
  store i32 0, i32* %5, align 4
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* @FIONBIO, align 4
  %15 = call i32 @ioctlsocket(i32 %13, i32 %14, i32* %5)
  br label %16

16:                                               ; preds = %12, %8
  ret i32 0
}

declare dso_local i32 @ioctlsocket(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
